[package]
name = "ghtree"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
# try this if static linking is failing
# reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
directories = "5.0"
indicatif = "0.17"
async-stream = "0.3"
colored = "2.1"
tokio-stream = "0.1"
