[package]
name = "gh-tree"
version = "0.4.0"
description = "Command Line tool that uses Github API"
edition = "2024"

[dependencies]
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
# reqwest = { version = "*", features = ["json", "stream"] }
reqwest = { version = "*", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
futures = "*"
anyhow = "*"
directories = "*"
indicatif = "*"
async-stream = "*"
colored = "*"
tokio-stream = "*"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

